sandbox/output
fizzbuzz.c:26:7: error: conflicting types for 'fizzBuzzSeq'
 char* fizzBuzzSeq(int val)
       ^
In file included from fizzbuzz.c:1:0:
fizzbuzz.h:5:13: note: previous declaration of 'fizzBuzzSeq' was here
 const char* fizzBuzzSeq(int);
             ^
make: *** [test] Error 1
